# substrate-node-template

./: .gitignore  ChainSpec.md  LaunchOfNetworks.md  customSpec.json  customSpecRaw.json  nt-staging-raw.json  nt-staging.json  staging-raw.json  staging.json
.maintain/: frame-weight-template.hbs
frontend/: get_offchain_storage_value.ts  package-lock.json  package.json  tsconfig.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/kitties/: Cargo.toml  README.md
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/migrations/: v1.rs  v2.rs
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml  README.md
pallets/template/src/: lib.rs  mock.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  primitives.rs
